# lsc_planner

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/: agent_manager.hpp  cmd_publisher.hpp  collision_constraints.hpp  corridor_constructor.hpp  csv_reader.hpp  dynamic_debugger.hpp  geometry.hpp  grid_based_planner.hpp  kalman_filter.hpp  map_manager.hpp  mission.hpp  multi_sync_replayer.hpp  multi_sync_simulator.hpp  obstacle.hpp  obstacle_generator.hpp  param.hpp  polynomial.hpp  sp_const.hpp  traj_optimizer.hpp  traj_planner.hpp  util.hpp
include/Astar-3D/: astar.h  astarplanner.h  environmentoptions.h  gl_const.h  isearch.h  map.h  searchresult.h
include/RVO2/: Agent.h  Definitions.h  KdTree.h  Obstacle.h  RVO.h  RVOSimulator.h  Vector2.h
include/RVO2-3D/: API.h  Agent.h  Definitions.h  KdTree.h  RVO.h  RVOSimulator.h  Vector3.h
include/openGJK/: openGJK.hpp
launch/: simulation.launch  testall_empty.launch  testall_forest.launch  testall_office.launch
launch/debug/: debug.launch  multi_traj_parser.launch
launch/mapping/: kinect_mapping.launch  pcd2octomap.launch  pcdMsg2octomap.launch  zed_mapping.launch
launch/rviz_config/: config.rviz  debugger.rviz  kinect_mapping.rviz  mapping.rviz  multi_config.rviz  multi_config_perspective.rviz  multi_config_side.rviz  zed_mapping.rviz
log/: QPmodel.lp  conflict.lp  result_1632718261.222373_LSC_16agents.csv  result_1632914948.892145_LSC_16agents.csv  summary_LSC_16agents.csv
matlab/: mission_generator.m
missions/: circle20.json  maze1.json  maze1_2.json  maze2.json  maze2_2.json  maze8.json  multi_empty.json  multi_exp_circle16.json  multi_exp_initial16.json  multi_exp_maze10.json  multi_exp_maze8.json  multi_room4_1.json  multi_simple4.json  multi_square16.json  multi_square8.json  office1.json  office2.json  office2_2.json  readme.txt  room4_2.json  room4_3.json  simple3.json
missions/empty/10agents/: multi_random_10agents_1.json  multi_random_10agents_10.json  multi_random_10agents_11.json  multi_random_10agents_12.json  multi_random_10agents_13.json  multi_random_10agents_14.json  multi_random_10agents_15.json  multi_random_10agents_16.json  multi_random_10agents_17.json  multi_random_10agents_18.json  multi_random_10agents_19.json  multi_random_10agents_2.json  multi_random_10agents_20.json  multi_random_10agents_21.json  multi_random_10agents_22.json  multi_random_10agents_23.json  multi_random_10agents_24.json  multi_random_10agents_25.json  multi_random_10agents_26.json  multi_random_10agents_27.json  (+10 more)
src/: agent_manager.cpp  cmd_publisher.cpp  cmd_publisher_node.cpp  collision_constraints.cpp  grid_based_planner.cpp  map_manager.cpp  mission.cpp  multi_sync_debugger_node.cpp  multi_sync_replayer.cpp  multi_sync_simulator.cpp  multi_sync_simulator_node.cpp  param.cpp  traj_optimizer.cpp  traj_planner.cpp
src/Astar-3D/: astar.cpp  astarplanner.cpp  environmentoptions.cpp  isearch.cpp  list.cpp  map.cpp  node.cpp
src/RVO2/: Agent.cpp  KdTree.cpp  Obstacle.cpp  RVOSimulator.cpp
src/RVO2-3D/: Agent.cpp  KdTree.cpp  RVOSimulator.cpp
src/openGJK/: openGJK.cpp
world/: maze.bt  office.bt  room.bt  small_room.bt
world/forest/: forest1.bt  forest10.bt  forest11.bt  forest12.bt  forest13.bt  forest14.bt  forest15.bt  forest16.bt  forest17.bt  forest18.bt  forest19.bt  forest2.bt  forest20.bt  forest21.bt  forest22.bt  forest23.bt  forest24.bt  forest25.bt  forest26.bt  forest27.bt  forest28.bt  forest29.bt  forest3.bt  forest30.bt  forest4.bt  forest5.bt  forest6.bt  forest7.bt  forest8.bt  forest9.bt
(+240 files in other folders)
